--- a/src/components/game-page/game-page.scss
+++ b/src/components/game-page/game-page.scss
@@ -74,7 +74,7 @@
 
   @media screen and (max-width: 768px) {
     grid-template-columns: auto;
-    grid-template-rows: 290px auto;
+    grid-template-rows: auto auto;
   }
 }
 
